# Ouroboros-Epistle-Forge

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/: main.py
{{cookiecutter.project_slug}}/src/consumer/: config.py  kafka.py
{{cookiecutter.project_slug}}/src/handlers/: base.py  topic1.py
{{cookiecutter.project_slug}}/src/models/: envelope.py  user.py
